--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-hot-toast": "^2.5.2",
+    "react-number-format": "^5.4.4",
     "react-router-dom": "^7.7.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.19",
